# reddit-scraper

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  fetch.py  pyproject.toml  requirements-dev.txt
.github/workflows/: staging-to-main-pr.yml
src/: client.py  formatter.py  models.py
tests/: test_client.py  test_e2e_live.py  test_formatter.py  test_integration.py  test_models.py
