[project]
name = "reddit-scraper"
version = "0.1.0"
description = "Fetch top Reddit posts and comments as markdown for research"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "fetch.py"]

[project.scripts]
reddit-fetch = "fetch:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that hit the real Reddit API (deselected by default)",
]
addopts = "-m 'not e2e'"
